--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@google/generative-ai": "^0.24.1",
     "googleapis": "^169.0.0",
     "next": "16.0.7",
     "next-auth": "^5.0.0-beta.30",
